# MailSpoof

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PKGBUILD  README.md  SECURITY.md  docker-compose.yml  install.sh  install_termux.sh  mailspoof  mailspoof.desktop  mailspoof.spec  pyproject.toml  requirements.txt  setup.py  uninstall.py
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_method.md  feature_request.md  seo_optimization.md
docs/: CHANGELOG.md  DEPLOYMENT.md  SECURITY_SCENARIOS.md  TROUBLESHOOTING.md
lib/: audit.py  banner.py  cli.py  core.py  engine.py  server.py
lib/templates/builtins/: 01_ceo_fraud.txt  02_it_helpdesk.txt  03_bank_account.txt  04_microsoft_license.txt  05_paypal_security.txt  06_hr_benefits.txt  07_invoice_overdue.txt  08_mfa_bypass.txt  09_linkedin_security.txt  10_facebook_policy.txt  11_instagram_support.txt  12_twitter_lock.txt  13_tiktok_creator.txt  14_slack_verification.txt  15_zoom_suspension.txt  16_outlook_quarantine.txt  17_github_oauth.txt  18_salesforce_mfa.txt  19_appleid_lock.txt  20_aws_root.txt  21_google_workspace.txt  22_dropbox_expiry.txt  23_zoom_recording.txt  24_gitlab_oauth.txt  25_bitbucket_access.txt  26_github_sso.txt  27_youtube_copyright.txt  28_snapchat_lock.txt  29_pinterest_security.txt  30_reddit_moderator.txt  31_discord_trust.txt  32_spotify_payment.txt  33_netflix_verification.txt  34_airbnb_payout.txt  35_uber_receipt.txt  36_paypal_invoice.txt  37_microsoft_onedrive.txt  38_meta_ads.txt  39_amazon_order.txt  40_microsoft_teams.txt  (+22 more)
scripts/: build-deb.sh  mailspoof-wrapper.sh
templates/builtins/: 01_ceo_fraud.txt  02_it_helpdesk.txt  03_bank_account.txt  04_microsoft_license.txt  05_paypal_security.txt
